aks/helloworld.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: helloworld
  labels:
    app : helloworld
spec:
  selector:
    matchLabels:
      project: devops-test
  template:
    metadata:
      labels:
        project: devops-test
    spec:
      containers:
        - name : helloworld
          image: ghcr.io/alexshoostr/flask_helloworld:acr
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: secrets-store-inline
              mountPath: "/mnt/secrets-store"
              readOnly: true
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-tls"

---
apiVersion: v1
kind: Service
metadata:
  name: hw-service
  labels:
     env  : devops-test
     owner: AlexShoostr
spec:
  selector:
    project: devops-test
  ports:
    - name      : app-listener
      protocol  : TCP
      port      : 80
      targetPort: 5000
  type: ClusterIP
