aks/ingress-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloworld-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - devopstest.dokka.biz
    - devopstest.westeurope.cloudapp.azure.com
    secretName: ingress-tls1-csi
  rules:
  - host: devopstest.dokka.biz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hw-service
            port:
              number: 80
  - host: devopstest-aks.westeurope.cloudapp.azure.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hw-service
            port:
              number: 80
